# evolve

./: .gitignore  AGENTS.md  PSMN_RL_AGENT_IMPLEMENTATION.md  README.md  overfit_report.md  pyproject.toml  report.md  summary.md
.beads/: issues.jsonl
.github/: pull_request_template.md
scripts/: bootstrap.sh  eval.sh  eval_policy_modes.sh  install_procgen_port.sh  run_checkpoint_dynamics.sh  run_claim_gate.sh  run_claim_gate_conformance.sh  run_claim_gate_redteam_finalize.sh  run_claim_history_replay.sh  run_entropy_schedule_sweep.sh  run_freeze_hardening_finalize.sh  run_frozen_baseline_validation.sh  run_frozen_benchmark_pack_validation.sh  run_learner_state_supervision_sweep.sh  run_lss_architecture_specialist_program_stageA.sh  run_lss_architecture_specialist_program_stageB1.sh  run_lss_architecture_specialist_program_stageB2.sh  run_lss_architecture_specialist_program_stageB3.sh  run_lss_architecture_specialist_program_stageB4.sh  run_lss_architecture_specialist_program_stageC1.sh  run_lss_architecture_specialist_program_stageC2.sh  run_lss_architecture_specialist_program_stageC3.sh  run_lss_canonization_campaign_finalize.sh  run_lss_canonization_campaign_register.sh  run_lss_canonization_campaign_stage2.sh  run_lss_canonization_campaign_stage3.sh  run_lss_canonization_campaign_stage4.sh  run_lss_canonization_campaign_stage5.sh  run_lss_canonization_campaign_stage6.sh  run_lss_claim_broadening_additional_fresh_block.sh  run_lss_claim_broadening_extended_route_dependence.sh  run_lss_claim_broadening_reproduction.sh  run_lss_claim_consolidation_reproduction.sh  (+427 more)
(+1362 files in other folders)
